// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package articlerpc;

// 生成 golang 代码后的包名
option go_package = "./articlerpc";

/************** 通用消息 **************/
// 分页请求参数
message PageReq {
  int64 page = 1;      // 页码
  int64 page_size = 2; // 每页大小
  repeated string sorts = 3; // 排序字段
}

// 分页响应参数
message PageResp {
  int64 page = 1;      // 页码
  int64 page_size = 2; // 每页大小
  int64 total = 3;     // 总数
}

/************** 基础消息 **************/
// 文章预览信息
message ArticlePreview {
  int64 id = 1;// id
  string article_cover = 4;// 文章缩略图
  string article_title = 5;// 标题
  int64 created_at = 12;// 发表时间
  int64 like_count = 16;// 点赞数
  int64 view_count = 17;// 查看数量
}

// 文章分类信息
message ArticleCategory {
  int64 id = 1;// id
  string category_name = 2;// 分类名
}

// 文章标签信息
message ArticleTag{
  int64 id = 1;// id
  string tag_name = 2;// 标签名
}

// 文章详情信息
message ArticleDetails {
  int64 id = 1;// id
  string user_id = 2;// 作者
  int64 category_id = 3;// 文章分类
  string article_cover = 4;// 文章缩略图
  string article_title = 5;// 标题
  string article_content = 6;// 内容
  int64 article_type = 7;// 文章类型 1原创 2转载 3翻译
  string original_url = 8;// 原文链接
  int64 is_top = 9;// 是否置顶 1是
  int64 is_delete = 10;// 是否删除 1是
  int64 status = 11;// 状态值 1公开 2私密 3草稿 4已删除
  int64 created_at = 12;// 发表时间
  int64 updated_at = 13;// 更新时间
  ArticleCategory category = 14; // 分类
  repeated ArticleTag tag_list = 15; // 标签
  int64 like_count = 16;// 点赞数
  int64 view_count = 17;// 查看数量
}

// 分类预览信息
message Category{
  int64 id = 1;// id
  string category_name = 2;// 分类名
  int64 created_at = 3;// 创建时间
  int64 updated_at = 4;// 更新时间
}

// 分类详情信息
message CategoryDetails {
  int64 id = 1;// id
  string category_name = 2;// 分类名
  int64 created_at = 3;// 创建时间
  int64 updated_at = 4;// 更新时间
  int64 article_count = 5;// 文章数量
}

// 标签预览信息
message Tag{
  int64 id = 1;// id
  string tag_name = 2;// 标签名
  int64 created_at = 3;// 创建时间
  int64 updated_at = 4;// 更新时间
}

// 标签详情信息
message TagDetails {
  int64 id = 1;// id
  string tag_name = 2;// 标签名
  int64 created_at = 3;// 创建时间
  int64 updated_at = 4;// 更新时间
  int64 article_count = 5;// 文章数量
}

// 文章每日统计信息
message ArticleDailyStatistics{
  string date = 1; // 日期
  int64 count = 2; // 数量
}

/************** article 相关 **************/
message AddArticleReq {
  int64 id = 1;// id
  string user_id = 2;// 作者
  string article_cover = 4;// 文章缩略图
  string article_title = 5;// 标题
  string article_content = 6;// 内容
  int64 article_type = 7;// 文章类型 1原创 2转载 3翻译
  string original_url = 8;// 原文链接
  int64 is_top = 9;// 是否置顶 1是
  int64 status = 11;// 状态值 1 公开 2 私密 3 草稿 4 已删除
  string category_name = 15;// 分类名
  repeated string tag_name_list = 16; // 标签名
}

message AddArticleResp {
  ArticlePreview article = 1;
}

message UpdateArticleReq {
  int64 id = 1;// id
  string user_id = 2;// 作者
  string article_cover = 4;// 文章缩略图
  string article_title = 5;// 标题
  string article_content = 6;// 内容
  int64 article_type = 7;// 文章类型 1原创 2转载 3翻译
  string original_url = 8;// 原文链接
  int64 is_top = 9;// 是否置顶 1是
  int64 status = 11;// 状态值 1 公开 2 私密 3 草稿 4 已删除
  string category_name = 15;// 分类名
  repeated string tag_name_list = 16; // 标签名
}

message UpdateArticleResp {
  ArticlePreview article = 1;
}

message UpdateArticleDeleteReq{
  int64 article_id = 1;
  int64 is_delete = 2;// 是否删除 1是
}

message UpdateArticleDeleteResp {
  ArticlePreview article = 1;
}

message UpdateArticleTopReq{
  int64 article_id = 1;
  int64 is_top = 2;// 是否置顶 1是
}

message UpdateArticleTopResp {
  ArticlePreview article = 1;
}

message GetArticleReq {
  int64 id = 1;
}

message GetArticleResp {
  ArticleDetails article = 1;
}

message GetArticleRelationReq {
  int64 id = 1;
}

message GetArticleRelationResp {
  ArticlePreview last = 1;
  ArticlePreview next = 2;
  repeated ArticlePreview recommend = 3;
  repeated ArticlePreview newest = 4;
}

message DeletesArticleReq {
  repeated int64 ids = 1;
}

message DeletesArticleResp {
  int64 success_count = 1;
}

message VisitArticleReq {
  int64 id = 1;
}

message VisitArticleResp{
}

message LikeArticleReq {
  int64 id = 1;
}

message LikeArticleResp {
}

message FindUserLikeArticleReq {
  string user_id = 1;
}

message FindLikeArticleResp{
  repeated int64 like_article_list = 1;
}

message FindArticleListReq{
  PageReq paginate = 1;    // 分页参数
  string article_title = 2;// 标题
  int64 article_type = 3;// 文章类型 1原创 2转载 3翻译
  string category_name = 4;// 分类名
  string tag_name = 5;// 标签名
  int64 is_top = 6;// 是否置顶 1是
  int64 is_delete = 7;// 是否删除 1是
  int64 status = 8;// 状态值 1公开 2私密 3草稿 4已删除
  repeated int64 ids = 9; //文章id列表
}

message FindArticleListResp {
  PageResp pagination = 1; // 分页信息
  repeated ArticleDetails list = 2;
}

message FindArticlePreviewListResp{
  PageResp pagination = 1; // 分页信息
  repeated ArticlePreview list = 2;
}

/************** category 相关 **************/
message AddCategoryReq {
  int64 id = 1;// id
  string category_name = 2;// 分类名
}

message AddCategoryResp {
  Category category = 1;
}

message UpdateCategoryReq {
  int64 id = 1;// id
  string category_name = 2;// 分类名
}

message UpdateCategoryResp {
  Category category = 1;
}

message GetCategoryReq {
  int64 id = 1;
}

message GetCategoryResp {
  CategoryDetails category = 1;
}

message DeletesCategoryReq {
  repeated int64 ids = 1;
}

message DeletesCategoryResp {
  int64 success_count = 1;
}

message FindCategoryListReq{
  PageReq paginate = 1;    // 分页参数
  string category_name = 2;
}

message FindCategoryListResp {
  PageResp pagination = 1; // 分页信息
  repeated CategoryDetails list = 2;
}

/************** tag 相关 **************/
message AddTagReq {
  int64 id = 1;// id
  string tag_name = 2;// 标签名
}

message AddTagResp {
  Tag tag = 1;
}

message UpdateTagReq {
  int64 id = 1;// id
  string tag_name = 2;// 标签名
}

message UpdateTagResp {
  Tag tag = 1;
}

message GetTagReq {
  int64 id = 1;
}

message GetTagResp {
  TagDetails tag = 1;
}

message DeletesTagReq {
  repeated int64 ids = 1;
}

message DeletesTagResp {
  int64 success_count = 1;
}

message FindTagListReq{
  PageReq paginate = 1;    // 分页参数
  string tag_name = 2;// 标签名
}

message FindTagListResp {
  PageResp pagination = 1; // 分页信息
  repeated TagDetails list = 2;
}

/************** analysis 相关 **************/
message AnalysisArticleReq{
}

message AnalysisArticleResp{
  int64 article_count = 1;
  int64 category_count = 2;
  int64 tag_count = 3;

  repeated CategoryDetails category_list = 4;
  repeated TagDetails tag_list = 5;
  repeated ArticlePreview article_rank_list = 6; // 文章浏览排序

  repeated ArticleDailyStatistics article_daily_statistics = 7; // 每日文章数量统计
}

// article服务
service ArticleRpc {
  // 分析文章数量
  rpc AnalysisArticle(AnalysisArticleReq) returns(AnalysisArticleResp);
  // 访问文章
  rpc VisitArticle(VisitArticleReq) returns(VisitArticleResp);

  // 创建文章
  rpc AddArticle(AddArticleReq) returns(AddArticleResp);
  // 更新文章
  rpc UpdateArticle(UpdateArticleReq) returns(UpdateArticleResp);
  // 更新文章删除
  rpc UpdateArticleDelete(UpdateArticleDeleteReq) returns(UpdateArticleDeleteResp);
  // 更新文章置顶
  rpc UpdateArticleTop(UpdateArticleTopReq) returns(UpdateArticleTopResp);
  // 删除文章
  rpc DeletesArticle(DeletesArticleReq) returns(DeletesArticleResp);
  // 查询文章
  rpc GetArticle(GetArticleReq) returns(GetArticleResp);
  // 查询关联文章
  rpc GetArticleRelation(GetArticleRelationReq) returns(GetArticleRelationResp);

  // 查询文章列表
  rpc FindArticleList(FindArticleListReq) returns(FindArticleListResp);
  // 查询文章列表
  rpc FindArticlePreviewList(FindArticleListReq) returns(FindArticlePreviewListResp);

  // 点赞文章
  rpc LikeArticle(LikeArticleReq) returns(LikeArticleResp);
  // 用户点赞的文章
  rpc FindUserLikeArticle(FindUserLikeArticleReq) returns(FindLikeArticleResp);

  // 创建文章分类
  rpc AddCategory(AddCategoryReq) returns(AddCategoryResp);
  // 更新文章分类
  rpc UpdateCategory(UpdateCategoryReq) returns(UpdateCategoryResp);
  // 查询文章分类
  rpc GetCategory(GetCategoryReq) returns(GetCategoryResp);
  // 删除文章分类
  rpc DeletesCategory(DeletesCategoryReq) returns(DeletesCategoryResp);
  // 查询文章分类列表
  rpc FindCategoryList(FindCategoryListReq) returns(FindCategoryListResp);

  // 创建标签
  rpc AddTag(AddTagReq) returns(AddTagResp);
  // 更新标签
  rpc UpdateTag(UpdateTagReq) returns(UpdateTagResp);
  // 查询标签
  rpc GetTag(GetTagReq) returns(GetTagResp);
  // 删除标签
  rpc DeletesTag(DeletesTagReq) returns(DeletesTagResp);
  // 查询标签列表
  rpc FindTagList(FindTagListReq) returns(FindTagListResp);
}